# WAMProbe

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter_proposal.yml  benchmark_proposal.yml  bug_report.yml  config.yml  experiment_result.yml  external_reproduction.yml  metric_proposal.yml
.github/workflows/: ci.yml  docs.yml  gpu-nightly.yml  publish-pypi.yml  release-candidate.yml
checkpoints/: README.md
configs/benchmarks/: libero_cf_mini_v0.1.json
configs/models/: starwam-capabilities-v0.1.json  upstream_models.json
docs/: NEXT_STEPS.md  QUICKSTART.md  SOLUTIONS_expand_liberocfmini_initi.md  WAMProbe_PLAN.md  index.md
docs/adapters/: CUSTOM_ADAPTER.md
docs/benchmarks/: LIBERO_CF_MINI.md  TOY_BENCHMARKS.md  libero_cf_mini_verified_v0.1.json
docs/experiments/: STARWAM_LIBERO_CF_MINI_V0.1.md  TOY_CLOSED_LOOP_V0.1.md
docs/metrics/: CORE_METRICS.md
docs/models/: STARWAM.md
docs/reproducibility/: EXTERNAL_REPRODUCTION_TEMPLATE.md  GPU_NIGHTLY.md  REPRODUCIBILITY.md
docs/research/: ADAPTER_SELECTION.md  WAM_VLA_FAILURE_CASES.md
docs/rfcs/: 0001-scope-and-capabilities.md  0002-counterfactual-metrics.md
environments/libero/: README.md  generate_cf_pilot.py
environments/starwam/: README.md  execute_prediction_matrix.py  run_libero_smoke.py
environments/starwam/patches/: 0001-safe-inference-loads.patch
examples/: __init__.py
examples/blockpush-demo/: report.html  report.md  summary.json
examples/closed-loop-study/: closed-loop-study.json  closed-loop-study.md
examples/custom_adapter/: README.md  __init__.py  adapter.py  run.py
examples/gripper-catch-demo/: report.html  report.md  summary.json
examples/pointmass-demo/: report.html  report.md  summary.json
examples/video-control-study/: video-control-study.json  video-control-study.md
paper/: CLAIMS_CHECKLIST.md  README.md  main.tex  references.bib
release/: README.md  evidence-manifest-v0.1.json  evidence-manifest-v0.1.schema.json
schemas/: capability-v0.1.schema.json  intervention-v0.1.schema.json  result-v0.1.schema.json
schemas/examples/: intervention-manipulation-v0.1.json  intervention-pointmass-v0.1.json
scripts/: build_release_candidate.py  validate_repository.py
src/wamprobe/: __init__.py  __main__.py  artifacts.py  cache.py  cli.py  closed_loop.py  counterfactual.py  datasets.py  doctor.py  evaluation.py  experiments.py  libero_cf.py  manipulation_evaluation.py  metrics.py  release_audit.py  reporting.py  stats.py  video_control_study.py  video_metrics.py
src/wamprobe/adapters/: __init__.py  baselines.py  manipulation.py  starwam.py
src/wamprobe/api/: __init__.py  capabilities.py  counterfactual.py  errors.py  manipulation.py  model.py  robotics.py  types.py
src/wamprobe/benchmarks/: __init__.py  blockpush.py  gripper_catch.py  pointmass.py  rendering.py
tests/: test_api.py  test_artifacts.py  test_cli.py  test_closed_loop_study.py  test_counterfactual_robotics.py  test_custom_adapter_example.py  test_dataset_cache.py  test_doctor.py  test_evaluation.py  test_experiments.py  test_import.py  test_libero_cf.py  test_manipulation_benchmarks.py  test_metrics.py  test_pointmass.py  test_ranking_metrics.py  test_release_audit.py  test_repository_validation.py  test_robotics_api.py  test_starwam_adapter.py  test_statistics.py  test_video_control_study.py
