[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wamprobe"
version = "0.0.0"
description = "Causal consistency and control-utility evaluation for World Action Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wamprobe"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["wamprobe"]
